fixed formatting on posts page wrt title/body overlap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,12 +24,10 @@ body {
 }
 
 
-
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
+h1, h2, h3, h4, h5, h6, blockquote, pre, p,
 ul, ol, dl, figure,
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
