--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -194,7 +194,7 @@
  * Posts
  */
 .post-header {
-    margin-bottom: $spacing-unit;
+    margin-bottom: 0;
 }
 
 .post-title {
