--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
   margin:0 0 20px;
 }
 
-p, ul, ol, table, pre, dl {
+ul, ol, table, pre, dl {
   margin:0 0 20px;
 }
 
@@ -107,8 +107,6 @@ img {
 }
 
 header {
-  width:270px;
-  float:left;
   position:fixed;
 }
 
